# pokedata

./: .gitattributes  .gitignore  CLAUDE.md  README.md  STRUCTURE.md  TODO.md  pyproject.toml  requirements.txt  sample_type_visualizer.ipynb  save_sprite.ipynb  sprite.ipynb  type_visualizer.ipynb
.cursor/rules/: COMMIT_PROMPT.md
notebooks/: 00_data_pipeline.ipynb  setup.ipynb
notebooks/analytics/: TODO_ANALYTICS.md
notebooks/engineering/: 00_ingestion.ipynb  00_setup.ipynb  01_file_formats.ipynb  01_ingestion.ipynb  02_file_formats.ipynb  TODO_ENGINEERING.md
notebooks/science/: TODO_SCIENCE.md
samples/: sample_type_visualizer.ipynb  save_sprite.ipynb
src/: constants.py  env.py  ingestion.py
