[project]
name = "pokedata"
version = "0.1.0"
description = "data science, engineering, and analytics with pokemon in Python!"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "plotly>=5.22",
    "scikit-learn>=1.5",
    "xgboost>=2.0",
    "scipy>=1.14",
    "statsmodels>=0.14",
    "nltk>=3.9",
    "pokebase>=1.4",
    "ipykernel>=6.29",
    "requests>=2.32",
    "tqdm>=4.66",
]
